<resources>
    <string name="app_name">TheFit</string>
    <string name="Calender">Calender</string>
    <string name="Training">Training</string>
    <string name="Nutrition">Nutrition</string>
    <string name="Heart">Heart</string>
    <string name="Info">Info</string>
    <string name="feel_the_burn_babe">Feel the burn babe</string>
    <string name="train">Train</string>
    <string name="menu_clicked">Menu Clicked</string>
    <string name="meals">Meals</string>
    <string name="get_balance_gurl">Get balance gurl</string>
    <string name="starting_weight">Starting Weight</string>
    <string name="current_weight">Current Weight</string>
    <string name="body_fat">Body Fat</string>
    <string name="my_weight">My Weight</string>
    <string name="update_weight">Update Weight</string>
    <string name="view_history">View History</string>
    <string name="me">Me</string>
    <string name="username">asdas asd</string>
    <string name="weight_history">Weight History</string>
    <string name="day">Day</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="gym">Gym</string>
    <string name="home">Home</string>
    <string name="my_program">My Program</string>
    <string name="complete_stability_session">Complete Stability Session</string>
    <string name="intensity">Intensity</string>
    <string name="skill">Skill</string>
    <string name="increase_difficulty">Increase Difficulty</string>
    <string name="decrease_difficulty">Decrease Difficulty</string>
    <string name="previous_personal_best">Previous Personal Best</string>
    <string name="alternate_exercise">Alternate Exercise</string>
    <string name="week">Week</string>
</resources>