<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_12">

    <ImageView
        android:id="@+id/ivPrev"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_40"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_action_arrow_back_ios"
        app:layout_constraintBottom_toBottomOf="@+id/tvWeek"
        app:layout_constraintEnd_toStartOf="@+id/tvWeek"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvWeek"
        app:tint="@color/silver_chalice" />

    <TextView
        android:id="@+id/tvWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_weight="1"
        android:text="Week 1"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivNext"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_24"
        android:contentDescription="@string/app_name"
        android:rotation="180"
        android:src="@drawable/ic_action_arrow_back_ios"
        app:layout_constraintBottom_toBottomOf="@+id/tvWeek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvWeek"
        app:layout_constraintTop_toTopOf="@+id/tvWeek"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tvDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_weight="1"
        android:paddingTop="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8"
        android:text="@string/day"
        android:textAppearance="@style/Regular"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_16"
        app:layout_constraintEnd_toStartOf="@+id/tvOne"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeek"
        app:layout_constraintWidth_default="wrap" />

    <TextView
        android:id="@+id/tvSeven"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/dp_8"
        android:padding="@dimen/dp_8"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/seven"
        android:textAlignment="center"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvSix"
        app:layout_constraintTop_toBottomOf="@+id/tvWeek" />

    <TextView
        android:id="@+id/tvSix"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_weight="1"
        android:padding="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/six"
        android:textAlignment="center"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_16"
        app:layout_constraintEnd_toStartOf="@+id/tvSeven"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvFive"
        app:layout_constraintTop_toBottomOf="@+id/tvWeek" />

    <TextView
        android:id="@+id/tvOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_weight="1"
        android:background="@drawable/bg_selected_day"
        android:padding="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/one"
        android:textAlignment="center"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_16"
        app:layout_constraintEnd_toStartOf="@+id/tvTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDay"
        app:layout_constraintTop_toBottomOf="@+id/tvWeek" />

    <TextView
        android:id="@+id/tvTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_weight="1"
        android:padding="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/two"
        android:textAlignment="center"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_16"
        app:layout_constraintEnd_toStartOf="@+id/tvThree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvOne"
        app:layout_constraintTop_toBottomOf="@+id/tvWeek" />

    <TextView
        android:id="@+id/tvThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/dp_8"
        android:padding="@dimen/dp_8"
        android:text="@string/three"
        android:textAlignment="center"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_16"
        app:layout_constraintEnd_toStartOf="@+id/tvFour"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvTwo"
        app:layout_constraintTop_toBottomOf="@+id/tvWeek" />

    <TextView
        android:id="@+id/tvFour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_weight="1"
        android:padding="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/four"
        android:textAlignment="center"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_16"
        app:layout_constraintEnd_toStartOf="@+id/tvFive"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvThree"
        app:layout_constraintTop_toBottomOf="@+id/tvWeek" />

    <TextView
        android:id="@+id/tvFive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_weight="1"
        android:padding="@dimen/dp_8"
        android:text="@string/five"
        android:layout_marginStart="@dimen/dp_8"
        android:textAlignment="center"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_16"
        app:layout_constraintEnd_toStartOf="@+id/tvSix"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvFour"
        app:layout_constraintTop_toBottomOf="@+id/tvWeek" />

    <TextView
        android:id="@+id/tvGym"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_weight="1"
        android:background="@drawable/bg_selected_left"
        android:padding="@dimen/dp_4"
        android:text="@string/gym"
        android:textAlignment="center"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_16"
        app:layout_constraintEnd_toStartOf="@+id/tvHome"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDay" />

    <TextView
        android:id="@+id/tvHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_weight="1"
        android:background="@drawable/bg_unselected_right"
        android:padding="@dimen/dp_4"
        android:text="@string/home"
        android:textAlignment="center"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvGym"
        app:layout_constraintTop_toBottomOf="@id/tvDay" />

    <View
        android:id="@+id/vSeparator"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_18"
        android:background="@color/seashell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHome" />

</androidx.constraintlayout.widget.ConstraintLayout>