<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingStart="@dimen/dp_24"
    android:paddingTop="@dimen/dp_24"
    android:paddingEnd="@dimen/dp_24"
    android:paddingBottom="@dimen/dp_12">

    <TextView
        android:id="@+id/tvMyWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_weight"
        android:textAllCaps="true"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/vGraph"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_200"
        android:layout_marginTop="@dimen/dp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMyWeight" />

    <TextView
        android:id="@+id/tvCurrentWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/current_weight"
        android:textAllCaps="true"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/silver_chalice"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vGraph" />

    <TextView
        android:id="@+id/tvCurrentWeightCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentWeight" />

    <Button
        android:id="@+id/tvUpdateWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/bg_update_weight"
        android:text="@string/update_weight"
        android:textAllCaps="true"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentWeightCount" />

    <TextView
        android:id="@+id/tvViewHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_24"
        android:text="@string/view_history"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/silver_chalice"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateWeight" />

</androidx.constraintlayout.widget.ConstraintLayout>