<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="@dimen/dp_12">

    <TextView
        android:id="@+id/tvStartingWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:text="@string/starting_weight"
        android:textAllCaps="true"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/silver_chalice"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toStartOf="@+id/tvCurrentWeight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCurrentWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:text="@string/current_weight"
        android:textAllCaps="true"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/silver_chalice"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toStartOf="@+id/tvBodyFat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvStartingWeight"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBodyFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_24"
        android:text="@string/body_fat"
        android:textAllCaps="true"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/silver_chalice"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCurrentWeight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="wrap" />

    <TextView
        android:id="@+id/tvBodyFatCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@+id/tvBodyFat"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvBodyFat"
        app:layout_constraintTop_toBottomOf="@+id/tvBodyFat" />

    <TextView
        android:id="@+id/tvStartingWeightCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@+id/tvStartingWeight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvStartingWeight"
        app:layout_constraintTop_toBottomOf="@+id/tvStartingWeight" />

    <TextView
        android:id="@+id/tvCurrentWeightCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:textAppearance="@style/SemiBold"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@+id/tvCurrentWeight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvCurrentWeight"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentWeight" />

    <View
        android:id="@+id/vCurrentMeasurementDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStartingWeightCount" />


</androidx.constraintlayout.widget.ConstraintLayout>